// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts lib generator > should configure named inputs in nx.json 1`] = `
"{
  "affected": {
    "defaultBase": "main"
  },
  "targetDefaults": {
    "build": {
      "cache": true,
      "inputs": ["default"]
    },
    "lint": {
      "cache": true
    },
    "test": {
      "dependsOn": ["^build"],
      "inputs": ["default"]
    },
    "@nx/vitest:test": {
      "cache": true,
      "inputs": ["default", "^production"],
      "configurations": {
        "update-snapshot": {
          "args": "--update"
        }
      }
    },
    "compile": {
      "cache": true,
      "inputs": ["default"]
    }
  },
  "plugins": [
    {
      "plugin": "@nx/js/typescript",
      "options": {
        "typecheck": {
          "targetName": "typecheck"
        },
        "build": {
          "targetName": "compile",
          "configName": "tsconfig.lib.json",
          "buildDepsName": "build-deps",
          "watchDepsName": "watch-deps"
        }
      }
    },
    {
      "plugin": "@nx/vitest",
      "options": {
        "testTargetName": "test",
        "ciTargetName": "test-ci",
        "testMode": "watch"
      }
    }
  ],
  "namedInputs": {
    "biome": ["default", "{workspaceRoot}/biome.json"],
    "default": [
      {
        "dependentTasksOutputFiles": "**/*",
        "transitive": true
      }
    ]
  }
}
"
`;

exports[`ts lib generator > should generate library with custom directory > custom-dir-index.ts 1`] = `
"// Export your library code here
"
`;

exports[`ts lib generator > should generate library with custom directory > custom-dir-project.json 1`] = `
"{
  "name": "@proj/test-lib",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "libs/test-lib/src",
  "projectType": "library",
  "tags": [],
  "metadata": {
    "generator": "ts#project"
  },
  "targets": {
    "build": {
      "dependsOn": ["lint", "compile", "test"]
    },
    "compile": {
      "executor": "nx:run-commands",
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/tsc"],
      "options": {
        "command": "tsc --build tsconfig.lib.json",
        "cwd": "{projectRoot}"
      }
    },
    "lint": {
      "executor": "nx:run-commands",
      "cache": true,
      "inputs": ["biome"],
      "options": {
        "command": "biome lint {projectRoot}"
      },
      "configurations": {
        "fix": {
          "command": "biome check --write {projectRoot}"
        },
        "skip-lint": {
          "command": "node -e \\"\\""
        }
      }
    }
  }
}
"
`;

exports[`ts lib generator > should generate library with custom directory > custom-dir-tsconfig.json 1`] = `
"{
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json"
    },
    {
      "path": "./tsconfig.spec.json"
    }
  ],
  "compilerOptions": {}
}
"
`;

exports[`ts lib generator > should generate library with default options > eslint.config.mjs 1`] = `null`;

exports[`ts lib generator > should generate library with default options > index.ts 1`] = `
"// Export your library code here
"
`;

exports[`ts lib generator > should generate library with default options > project.json 1`] = `
"{
  "name": "@proj/test-lib",
  "$schema": "../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "test-lib/src",
  "projectType": "library",
  "tags": [],
  "metadata": {
    "generator": "ts#project"
  },
  "targets": {
    "build": {
      "dependsOn": ["lint", "compile", "test"]
    },
    "compile": {
      "executor": "nx:run-commands",
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/tsc"],
      "options": {
        "command": "tsc --build tsconfig.lib.json",
        "cwd": "{projectRoot}"
      }
    },
    "lint": {
      "executor": "nx:run-commands",
      "cache": true,
      "inputs": ["biome"],
      "options": {
        "command": "biome lint {projectRoot}"
      },
      "configurations": {
        "fix": {
          "command": "biome check --write {projectRoot}"
        },
        "skip-lint": {
          "command": "node -e \\"\\""
        }
      }
    }
  }
}
"
`;

exports[`ts lib generator > should generate library with default options > tsconfig.json 1`] = `
"{
  "extends": "../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json"
    },
    {
      "path": "./tsconfig.spec.json"
    }
  ],
  "compilerOptions": {}
}
"
`;

exports[`ts lib generator > should generate library with subdirectory > subdir-index.ts 1`] = `
"// Export your library code here
"
`;

exports[`ts lib generator > should generate library with subdirectory > subdir-project.json 1`] = `
"{
  "name": "@proj/test-lib",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "feature/test-lib/src",
  "projectType": "library",
  "tags": [],
  "metadata": {
    "generator": "ts#project"
  },
  "targets": {
    "build": {
      "dependsOn": ["lint", "compile", "test"]
    },
    "compile": {
      "executor": "nx:run-commands",
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/tsc"],
      "options": {
        "command": "tsc --build tsconfig.lib.json",
        "cwd": "{projectRoot}"
      }
    },
    "lint": {
      "executor": "nx:run-commands",
      "cache": true,
      "inputs": ["biome"],
      "options": {
        "command": "biome lint {projectRoot}"
      },
      "configurations": {
        "fix": {
          "command": "biome check --write {projectRoot}"
        },
        "skip-lint": {
          "command": "node -e \\"\\""
        }
      }
    }
  }
}
"
`;

exports[`ts lib generator > should generate library with subdirectory > subdir-tsconfig.json 1`] = `
"{
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json"
    },
    {
      "path": "./tsconfig.spec.json"
    }
  ],
  "compilerOptions": {}
}
"
`;
